clang/test/BSC/Negative/Ownership/RuleCheck/owned_pointer_owned_struct/owned_pointer_owned_struct.cbs
// RUN: %clang_cc1 -verify %s

void safe_free(void* _Owned);

_Owned struct S {
_Public:
    int* _Owned a;
    int b;
    ~S(S this) {
        safe_free((void* _Owned)this.a);
    }
};

typedef struct R {
    S* _Owned sp;
    S s;
} R;

S* _Owned initS();

void test1(R* _Owned r) {
    S tmp1 = *r->sp;
    S tmp2 = r->s;
} // expected-error {{memory leak of value: `r`}}
  // expected-error@-1 {{field memory leak of value: `r`, r.sp is leak}}

void test2(R* _Owned r) {
    S tmp1 = *r->sp;
    S tmp2 = r->s;
    safe_free((void* _Owned)r); // expected-error {{invalid cast to `void * _Owned` of not all moved value: `r`, r.sp is _Owned}}
}

void test3(R* _Owned r) {
    S tmp1 = *r->sp;
    S tmp2 = r->s;
    safe_free((void* _Owned)r->sp);
} // expected-error {{memory leak of value: `r`}}

void test4(R* _Owned r) {
    S* _Owned sp = r->sp;
    S tmp2 = r->s;
    safe_free((void* _Owned)r);
} // expected-error {{memory leak of value: `sp`}}
  // expected-error@-1 {{field memory leak of value: `sp`, sp.a is leak}}

void test5(R r) {
    S tmp1 = *r.sp;
    S tmp2 = r.s;
} // expected-error {{field memory leak of value: `r`, r.sp is leak}}

void test6(R r) {
    S tmp1 = *r.sp;
    S tmp2 = r.s;
    safe_free((void* _Owned)r.sp);
}

void test7(R r) {
    S* _Owned sp = r.sp;
    S tmp2 = r.s;
} // expected-error {{memory leak of value: `sp`}}
  // expected-error@-1 {{field memory leak of value: `sp`, sp.a is leak}}

void test8(R r) {
    S* _Owned sp = r.sp;
    S tmp2 = r.s;
    S tmp1 = *sp;
} // expected-error {{memory leak of value: `sp`}}

void test9(R r) {
    S* _Owned sp = r.sp;
    S tmp2 = r.s;
    S tmp1 = *sp;
    safe_free((void* _Owned)sp);
}

void test10(R r) {
    S tmp1 = *r.sp;
    *r.sp = tmp1;
} // expected-error {{field memory leak of value: `r`, r.sp, r.s, r.s.a, r.sp.a, *r.sp are leak}}

void test11(R r) {
    S tmp1 = *r.sp;
    *r.sp = tmp1;
    S tmp2 = {};
    *r.sp = tmp2; // expected-error {{assign to subfield _Owned value: `r`, r.sp.a is _Owned}}
                  // expected-error@-1 {{assign to part of _Owned value: `*r.sp`}}
} // expected-error {{field memory leak of value: `r`, r.sp, r.s, r.s.a, r.sp.a, *r.sp are leak}}

void test12(R r) {
    S tmp1 = *r.sp;
    r.sp = initS();  // expected-error {{assign to part of _Owned value: `r.sp`}}
} // expected-error {{field memory leak of value: `r`, r.sp, r.s, r.s.a, r.sp.a, *r.sp are leak}}

void test13(R* _Owned r) {
    R tmp = *r;
    *r = tmp;
} // expected-error {{memory leak of value: `r`}}
  // expected-error@-1 {{field memory leak of value: `r`, r.sp, *r.sp, r.sp.a, r.s, r.s.a are leak}}

void test14(R* _Owned r) {
    S tmp = *r->sp;
    *r->sp = tmp;
} // expected-error {{memory leak of value: `r`}}
  // expected-error@-1 {{field memory leak of value: `r`, r.sp, r.s, r.s.a, r.sp.a, *r.sp are leak}}

void test15(R* _Owned r) {
    S* _Owned tmp = r->sp;
    *r->sp = *tmp; // expected-error {{assign to part of moved value: `r.sp`}}
} // expected-error {{memory leak of value: `tmp`}}
  // expected-error@-1 {{memory leak of value: `r`}}
  // expected-error@-2 {{field memory leak of value: `r`, r.s, r.s.a, *r.sp are leak}}